# ak_video_analyser

./: .gitignore  LICENSE  README.md  TODO  activate_env.bat  ak_video_analyser_start.bat  ak_video_analyser_start.sh  build_pip.bat  build_win.bat  creating_env_ak_video_analyser.sh  requirements_ubuntu_20.04_cpu.txt  requirements_ubuntu_20.04_gpu.txt  requirements_windows_10.txt  requirements_windows_10_02.txt  setup.cfg
docs/: HEADER_CODE.txt  USER_MANUAL_ak_video_analyser_v1.md
src/: ak_video_analyser_cmd.py  ak_video_analyser_main.py  requirements_linux.txt  requirements_windows.txt
src/ak-video-analyser/: __main__.py
src/ak-video-analyser/conf/: my_app_config.conf
src/ak-video-analyser/output_results/output_csv/: README.md.txt
src/ak_video_analyser/: __main__.py  temporal_notes.py
src/ak_video_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ak_video_analyser/ak_video_analyser/conf/: README.md
src/ak_video_analyser/output_results/output_csv/: 20230808_104703__PARAMS.txt  20230808_104819__PARAMS.txt
src/camera_management_s/: camera_parameters.py  camera_parameters_selector.py
src/camera_management_s/test/: test_calibration.py  test_camera_parameters.py
src/data_features_processor/: data_features_config.py  features_extraction.py
src/data_features_processor/test/: test_data_feature_config.py  test_features_extraction.py  test_features_extraction_mask.py
src/dataset_management/: dataset_config.py  dataset_manager.py  filename_decoder.py  pascal_voc_parser.py
src/dataset_management/test/: test_dataset_config.py  test_dataset_manager.py  test_filename_decoder.py  test_pascal_voc_parser.py  test_suite_dataset_management.py
src/depth_estimation_s/: depth_estimation_methods.py  depth_estimation_methods_selector.py
src/depth_estimation_s/test/: test_depth_estimation.py  test_depth_estimation_mask.py
src/filters_v/: depth_filter.py  obj_filters.py  obj_filters_02.py
src/filters_v/test/: test_depth_filter.py  test_obj_filters.py  test_obj_filters_02.py
src/gui_analyser/: gui_app_about_window.py  gui_app_help_window.py  gui_app_main_window_02.py  gui_video_analyser_config.py
src/helpers/: helper_filesystem.py  helper_load_config.py  helper_validation.py
src/object_detection/: detector_model_selector.py  generic_detector_bbox.py  generic_detector_mask.py  generic_detector_yolov8_mask.py  generic_model_helper.py  object_detector_config.py  object_detector_yolov8_config.py
src/object_detection/test/: temporal_vector.py  test_object_detector_bbox.py  test_object_detector_config.py  test_object_detector_mask.py
src/screen_layout_s/: draw_screen_helpers.py
src/screen_layout_s/test/: test_dataset_draw_circle_enclosing.py  test_dataset_draw_circle_fitting.py  test_dataset_draw_ellipses.py  test_dataset_draw_masks.py  test_dataset_draw_parameters.py  test_dataset_draw_rectangles.py  test_dataset_draw_rotate_rectangles.py  test_draw_ellipses.py  test_draw_screen.py  test_mask_segmentation.py
src/screen_layout_v/: TODO_SCREEN.md  draw_prediction_screen.py  draw_screen_selector.py  information_containers.py
src/screen_layout_v/test/: test_prediction_screen.py
src/size_estimation_s/: image_processing.py  roi_selector.py  shape_fitting_methods.py  size_estimation_methods.py  size_estimation_methods_selector.py
src/size_estimation_s/test/: test_shape_fitting_methods.py  test_size_estimation_px_bbox.py  test_size_estimation_px_mask.py
src/video_analysis_v/: video_analyser_config2.py  video_analyser_config_yolov8.py  video_analyser_framework.py  video_analyser_framework_yolov8.py
src/video_analysis_v/test/: temporal_p.py  test_video_analyser_2.py  test_video_analyser_config.py
src/video_analysis_v/video_helpers/: helpers.py
src/weight_prediction_s/: weight_prediction_methods.py  weight_prediction_methods_selector.py
src/weight_prediction_s/test/: test_weight_prediction.py
win_exe_conf/: __main__.spec
(+51 files in other folders)
