[metadata]
name = ak_video_analyser
version = 0.0.1
author = Juan Carlos Miranda, Jaume Arno, Jordi Gene-Mola, Spyros Fountas, Eduard Gregorio
author_email = juancarlos.miranda@udl.cat, jaume.arno@udl.cat, jordi.genemola@udl.cat, sfountas@aua.gr, eduard.gregorio@udl.cat
description = AK_VIDEO_ANALYZER that analyses videos on which to automatically detect apples, estimate their size and predict yield at the plot or per hectare scale using the appropriate simulated algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GRAP-UdL-AT/ak_video_analyser/
project_urls = Bug Tracker = https://github.com/GRAP-UdL-AT/ak_video_analyser/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.md
# Include any *.dat files found in the "data" subdirectory of the "my_app_name"
# package:
ak-video-analyser = conf/*.conf