[metadata]
name = ak_video_analyser
version = 0.0.1
author = Juan Carlos Miranda, Jaume Arno, Jordi Gene-Mola, Spyros Fountas, Eduard Gregorio
author_email = juancarlos.miranda@udl.cat, jaume.arno@udl.cat, jordi.genemola@udl.cat, sfountas@aua.gr, eduard.gregorio@udl.cat
description = AK_VIDEO_ANALYZER that analyses videos on which to automatically detect apples, estimate their size and predict yield at the plot or per hectare scale using the appropriate simulated algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GRAP-UdL-AT/ak_video_analyser/
project_urls = Bug Tracker = https://github.com/GRAP-UdL-AT/ak_video_analyser/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    altgraph==0.17.3
    bleach==6.0.0
    build==0.10.0
    certifi==2022.12.7
    charset-normalizer==3.0.1
    colorama==0.4.6
    contourpy==1.1.0
    cycler==0.11.0
    docutils==0.19
    fonttools==4.40.0
    future==0.18.3
    idna==3.4
    importlib-metadata==6.0.0
    importlib-resources==5.10.2
    jaraco.classes==3.2.3
    keyring==23.13.1
    kiwisolver==1.4.4
    lxml==4.9.2
    markdown-it-py==2.1.0
    matplotlib==3.7.2
    mdurl==0.1.2
    more-itertools==9.0.0
    numpy==1.24.2
    opencv-python==4.7.0.68
    packaging==23.0
    pandas==1.5.3
    pefile==2022.5.30
    Pillow==9.4.0
    pkginfo==1.9.6
    psutil==5.9.5
    Pygments==2.14.0
    pyinstaller==5.7.0
    pyinstaller-hooks-contrib==2022.15
    pyk4a==1.5.0
    pyparsing==3.0.9
    pyproject_hooks==1.0.0
    python-dateutil==2.8.2
    pytz==2022.7.1
    pywin32-ctypes==0.2.0
    PyYAML==6.0
    readme-renderer==37.3
    requests==2.28.2
    requests-toolbelt==0.10.1
    rfc3986==2.0.0
    rich==13.3.1
    scipy==1.10.0
    seaborn==0.12.2
    six==1.16.0
    tomli==2.0.1
    torch==1.13.1
    torchaudio==0.13.1
    torchvision==0.14.1
    tqdm==4.65.0
    twine==4.0.2
    typing_extensions==4.4.0
    ultralytics==8.0.128
    urllib3==1.26.14
    webencodings==0.5.1
    zipp==3.12.1

[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.md, *.pth, *.pt
# Include any *.dat files found in the "data" subdirectory of the "ak_video_analyser"
# package:
#ak_video_analyser = conf/*.conf
ak_video_analyser = conf/*.conf, conf/trained_model/MASK_RCNN_CUSTOMIZED/*.pth, conf/trained_model/YOLOv8/*.pt
gui_analyser = assets/*.png